# portfolio-cv-llm-agent

./: .env.example  .gitignore  README.md  README_CV_AGENT.md  pyproject.toml  requirements.txt
data/job_postings/: example_data_engineer.txt
docs/: MILESTONE_2_BLUEPRINT.md  ROADMAP.md
scripts/: generate_cv.py  ingest_cv.py
src/personal_cv_agent/: __init__.py  config.py  embeddings.py  generator.py  job_analysis.py  loaders.py  pipeline.py  planner.py  portfolio_loader.py  retrieval.py  schemas.py  transformers.py  validator.py  vector_store.py
tests/: test_embeddings.py  test_generation_cleanup.py  test_job_analysis.py  test_retrieval.py  test_validator.py
